Desktop version complete

--- a/assets/base.css
+++ b/assets/base.css
@@ -26,7 +26,7 @@
     --violet-light: #7048e8;
     --accents-0: #f8f9fa;
     --accents-1: #f1f3f5;
-    --accents-2: #e9ecef;
+    --accents-2: #EDEEF2;
     --accents-3: #dee2e6;
     --accents-4: #ced4da;
     --accents-5: #adb5bd;
